--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <version>1.4.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
