--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,17 +21,17 @@ spring:
       primary: master
       datasource:
         master:
-          name: loganalysis
+          name: sop
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://123.249.42.58:3306/${spring.datasource.dynamic.datasource.master.name}?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://localhost:3306/${spring.datasource.dynamic.datasource.master.name}?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
           username: root
           password: MySqlPassword!!
-        slave:
-          name: loganalysis
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://121.42.24.63:3306/${spring.datasource.dynamic.datasource.slave.name}?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
-          username: gemuser
-          password: gemuser123
+#        slave:
+#          name: loganalysis
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://121.42.24.63:3306/${spring.datasource.dynamic.datasource.slave.name}?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+#          username: gemuser
+#          password: gemuser123
 
   kafka:
     ###########【Kafka集群】###########
@@ -64,7 +64,7 @@ spring:
       properties:
         # 默认的消费组ID
         group:
-          id: defaultConsumerGroupLocal
+          id: defaultConsumerGroup
         # 消费会话超时时间(超过这个时间consumer没有发送心跳,就会触发rebalance操作)
         session:
           timeout:
@@ -79,11 +79,11 @@ spring:
       #enable-auto-commit: true
       #auto-offset-reset: latest
       # 批量消费每次最多消费多少条消息
-      max-poll-records: 50
+      max-poll-records: 500
 
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-    # 控制台打印sql语句
-    #configuration:
+  # 控制台打印sql语句
+  #configuration:
   #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
