--- a/pom.xml
+++ b/pom.xml
@@ -153,11 +153,19 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.minio/minio -->
-        <dependency>
+        <!--<dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
             <version>8.4.0</version>
-        </dependency>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <!--<dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>-->
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
