剔除无用依赖

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
             <version>23.05.16.002</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.gem</groupId>
             <artifactId>gemel-dal-pools</artifactId>
             <version>23.04.19.001</version>
@@ -76,7 +76,7 @@
             <groupId>com.gem</groupId>
             <artifactId>gemadad-sso</artifactId>
             <version>0.0.2</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.baomidou</groupId>
