添加全局登录拦截

--- a/gemadad-metadata.properties
+++ b/gemadad-metadata.properties
@@ -1,14 +1,13 @@
 {
-"passwordEncrypted":true,
 "poolName":"respository",
 "poolType":"M4DBPool",
 "dbType":"MYSQL",
 "dbVersion":"",
 "driverName":"com.mysql.cj.jdbc.Driver",
 "jndiName":"",
-"jdbcURL":"jdbc:mysql://222.95.84.173:3306/sop?useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=UTF8&rewriteBatchedStatements=true&useCursorFetch=true&defaultFetchSize=100",
+"jdbcURL":"jdbc:mysql://123.249.42.58:3306/loganalysis?useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=UTF8&rewriteBatchedStatements=true&useCursorFetch=true&defaultFetchSize=100",
 "userName":"root",
-"password":"C7D60A88E9482B59A667ACA430BE990A",
+"password":"MySqlPassword!!",
 "schema":"",
 "initialSize":5,
 "maxActive":20,
