--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,11 +32,6 @@ spring:
           url: jdbc:mysql://121.42.24.63:3306/${spring.datasource.dynamic.datasource.slave.name}?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
           username: gemuser
           password: gemuser123
-#        prod:
-#          driver-class-name: com.mysql.cj.jdbc.Driver
-#          url: jdbc:mysql://222.95.84.173:3306/sop?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
-#          username: root
-#          password: M^stBechgd1
 
   kafka:
     ###########【Kafka集群】###########
@@ -93,9 +88,11 @@ mybatis-plus:
 #  configuration:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-logging:
-  file:
-    name: D:/workspace/project/loganalysis/src/main/resources/log/local.log
+#logging:
+#  file:
+#    name: D:/workspace/project/loganalysis/src/main/resources/log/local.log
+
+verifyUrl: http://123.249.42.58:9090/oauth/verifyToken
 
 minio:
   #Minio服务所在地址
