1.完善本地原始日志文件定时上传删除机制; 2.提供事件类型与封堵规则增删改查接口; 3.补充事件根据对应封堵规则自行执行封堵动作(目前只有打印执行封堵所需数据)功能;

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: dev
+    active: prod
 
   mvc:
     static-path-pattern: /**
@@ -35,3 +35,4 @@ mybatis-plus:
 
 business-config:
   adad-default-package: 01
+  logBlockFileRetentionDays: 7
