1.暂时关闭Kafka监听; 2.AESUtil加解密算法替换字符串中的/为&; 3.调试SNMP监听模块功能并修复部分BUG,使服务可以正常发送get/walk请求并返回监听到的值;

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ minio:
   bucketName: logrecord
 
 pool:
-  poolName: "default"
+  poolName: "sop"
   poolType: "M4DBPool"
   dbType: "MYSQL"
   dbVersion: ""
