--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,6 +8,7 @@ business-config:
   adadDefaultPackage: "defaultPackage"
   logBlockFileRetentionDays: 7
   snmpMonitorEnable: false
+  kafkaMainTopic: logRepo3
 
 minio:
   #Minio服务所在地址
