--- a/src/main/resources/application-prodonline.yml
+++ b/src/main/resources/application-prodonline.yml
@@ -1,17 +1,18 @@
-verifyUrl: http://222.95.84.173:9090/oauth/verifyToken
+verifyUrl: http://localhost:9090/oauth/verifyToken
 
 business-config:
   authenticationEnable: true
   responseEncryptEnable: true
   AESKey: SKVNMEIHJLOANSKI
-  logMonitorEnable: true
+  logMonitorEnable: false
   adadDefaultPackage: "defaultPackage"
   logBlockFileRetentionDays: 7
   snmpMonitorEnable: false
+  kafkaMainTopic: logRepo3
 
 minio:
   #Minio服务所在地址
-  endpoint: http://222.95.84.173:5000/
+  endpoint: http://localhost:5000/
   #访问的key
   accessKey: Jonny
   #访问的秘钥
@@ -26,7 +27,7 @@ pool:
   dbVersion: ""
   driverName: "com.mysql.cj.jdbc.Driver"
   jndiName: ""
-  jdbcURL: "jdbc:mysql://222.95.84.173:3306/sop?useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=UTF8&rewriteBatchedStatements=true&useCursorFetch=true&defaultFetchSize=100"
+  jdbcURL: "jdbc:mysql://localhost:3306/sop?useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=UTF8&rewriteBatchedStatements=true&useCursorFetch=true&defaultFetchSize=100"
   userName: "root"
   password: "M^stBechgd1"
   schema: ""
@@ -57,12 +58,12 @@ spring:
       datasource:
         master:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://222.95.84.173:3306/sop?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://localhost:3306/sop?characterEncoding=utf8&nullCatalogMeansCurrent=true&useSSL=false&useUnicode=true&0=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
           username: root
           password: M^stBechgd1
   kafka:
     ###########【Kafka集群地址】###########
-    bootstrap-servers: 222.95.84.173:9092
+    bootstrap-servers: localhost:9092
 
     ###########【初始化生产者配置】###########
     producer:
