实时日志查看BUG修复; 部分业务接口调整;

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -56,10 +56,10 @@ logging:
   file:
     name: D:/workspace/project/loganalysis/src/main/resources/log/local.log
 
-#mybatis-plus:
-#  # 控制台打印sql语句
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus:
+  # 控制台打印sql语句
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring:
   datasource:
