--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,11 +4,12 @@ business-config:
   authenticationEnable: false
   responseEncryptEnable: false
   AESKey: SKVNMEIHJLOANSKI
-  logMonitorEnable: false
+  logMonitorEnable: true
   adadDefaultPackage: "defaultPackage"
   logBlockFileRetentionDays: 7
   snmpMonitorEnable: false
   kafkaMainTopic: logRepo3
+  webSocketPrefix: 123.249.42.58:8080
 
 minio:
   #Minio服务所在地址
@@ -102,7 +103,7 @@ spring:
       properties:
         # 默认的消费组ID
         group:
-          id: defaultConsumerGroup
+          id: defaultConsumerGroup01
         # 消费会话超时时间(超过这个时间consumer没有发送心跳,就会触发rebalance操作)
         session:
           timeout:
